# fumiko

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yml
fumiko/: main.py
tests/: test_main.py
