[project]
name = "fumiko"
version = "0.1.0"
description = "Find duplicated files."
authors = [{ name = "yawn west", email = "yawn.west@posteo.eu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fumiko = "fumiko.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
mypy = "^1.15.0"
black = "^24.3.0"
pre-commit = "^4.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=fumiko --cov-report=term-missing"

[tool.mypy]
python_version = "3.13"
strict = true

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
